--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="loan_amount">Loan Amount</string>
+    <string name="ok_button_text">OK</string>
+    <string name="calculate_interest_button">Calculate Interest</string>
 </resources>
